--- a/pages/post-detail/post-detail.wxml
+++ b/pages/post-detail/post-detail.wxml
@@ -1,7 +1,7 @@
 <view class="container">
   <image class="head-image" src="{{postData.headImgSrc}}"></image>
-  <image wx:if="{{!isPlaying}}" bind:tap="onMusicStart" class="audio" src="/images/music/music-start.png" />
-  <image wx:else bind:tap="onMusicStop" class="audio" src="/images/music/music-stop.png" />
+  <image wx:if="{{!isPlaying}}" bind:tap="onMusicStart" class="audio" src="../../images/icon/music-start.png" />
+  <image wx:else bind:tap="onMusicStop" class="audio" src="../../images/icon/music-stop.png" />
   <view class="author-date">
     <image class="avatar" src="{{postData.avatar}}"></image>
     <text class="author">{{postData.author}}</text>
@@ -11,9 +11,9 @@
   <text class="title">{{postData.title}}</text>
   <view class="tool">
     <view class="circle">
-      <image wx:if="{{collected}}" bind:tap="onCollect" src="/images/icon/collection.png"></image>
-      <image wx:else bind:tap="onCollect" src="/images/icon/collection-anti.png"></image>
-      <image bind:tap="onShare" class="share-img" src="/images/icon/share.png"></image>
+      <image wx:if="{{collected}}" bind:tap="onCollect" src="../../images/icon/collection.png"></image>
+      <image wx:else bind:tap="onCollect" src="../../images/icon/collection-anti.png"></image>
+      <image bind:tap="onShare" class="share-img" src="../../images/icon/share.png"></image>
     </view>
     <view class="horizon"></view>
   </view>
